[gd_scene load_steps=7 format=3 uid="uid://gocrldq4i1bl"]

[ext_resource type="Theme" uid="uid://d4dmxjv5l13r7" path="res://addons/complete_settings/scenes/settings/example_theme.tres" id="1_urext"]
[ext_resource type="Script" path="res://addons/complete_settings/scenes/settings/example.gd" id="2_dyjjv"]
[ext_resource type="PackedScene" uid="uid://c7d36yy26m5r4" path="res://addons/complete_settings/scenes/settings/validation_bar.tscn" id="2_ljsyw"]
[ext_resource type="PackedScene" uid="uid://fpjnjbm2uirc" path="res://addons/complete_settings/scenes/categories/sound/sound_category.tscn" id="3_slarg"]
[ext_resource type="PackedScene" uid="uid://bkl0ujm52n4hr" path="res://addons/complete_settings/scenes/categories/video/video_category.tscn" id="4_533ht"]
[ext_resource type="PackedScene" uid="uid://cacfv61munwfy" path="res://addons/complete_settings/scenes/categories/keybinds/keybinds_category.tscn" id="4_emvtm"]

[node name="Settings" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_urext")
theme_type_variation = &"SettingsPanelContainer"
script = ExtResource("2_dyjjv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SETTING_CATEGORY_SOUND" parent="VBoxContainer/TabContainer" instance=ExtResource("3_slarg")]
layout_mode = 2

[node name="SETTING_CATEGORY_KEYBINDS" parent="VBoxContainer/TabContainer" instance=ExtResource("4_emvtm")]
visible = false
layout_mode = 2

[node name="SETTING_CATEGORY_VIDEO" parent="VBoxContainer/TabContainer" instance=ExtResource("4_533ht")]
visible = false
layout_mode = 2

[node name="ValidationBar" parent="VBoxContainer" instance=ExtResource("2_ljsyw")]
layout_mode = 2

[connection signal="applied" from="VBoxContainer/ValidationBar" to="." method="_on_validation_bar_applied"]
[connection signal="canceled" from="VBoxContainer/ValidationBar" to="." method="_on_validation_bar_canceled"]
[connection signal="validated" from="VBoxContainer/ValidationBar" to="." method="_on_validation_bar_validated"]
